# api/requests/authentication_requests.go
@@ -9,3 +9,12 @@ type LoginRequest struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
 }
+
+type TokensRequest struct {
+	JWTToken     string `json:"jwt_token"`
+	RefreshToken string `json:"refresh_token"`
+}
+
+type LogOutRequest struct {
+	UserID int `json:"user_id"`
+}
